--- a/index.html
+++ b/index.html
@@ -167,20 +167,10 @@
           <div class="swiper-wrapper">
               <div class="cont-item" data-aos="fade-left">
                   <img src="assets/img/Langgraphagent.Architecture.png" alt="Image 1" class="project-image">
-                  <div class="project-topic">PO AI Assistant</div>
+                  <div class="project-topic">Purchase Order AI Assistant</div>
                   <img src="assets/img/arch.png" alt="Image 1" class="project-image">
                   <div class="project-topic">CV Skill Assistant</div>
               </div>
-
-            <!-- ======= <div class="swiper-slide">
-              <div class="cont-item" data-aos="fade-left">
-                <a href="https://github.com/rajaramkuberan/ProjectProfile/tree/main/AI_Projects/Gen_AI/UCD_LLM"
-                  target="_blank">
-                  <img src="assets/img/genai.png" alt="Image 2" class="project-image">
-                  <div class="project-topic">UCD-LLM</div>
-                </a>
-              </div>
-            </div> ======= -->
             
           </div>
           <div class="swiper-pagination"></div>
@@ -203,7 +193,7 @@
             <h4>AI Architect/Engineer</h4>
             <h5>Apr'25 - Present</h5>
             <p><em>Clients (UK & US)</em></p>
-            <h4><b>PO Agent API — Agentic Procurement Assistant (LangGraph + FastAPI + HITL + RAG + Tools + AWS Bedrock + Azure OpenAI + LangSmith)</b></h4>
+            <h4><b>PO Agentic AI — Agentic Procurement Assistant (LangGraph + FastAPI + HITL + RAG + Tools + AWS Bedrock + Azure OpenAI + LangSmith)</b></h4>
             <ul>
               <li>A production-ready backend for an AI procurement assistant that can check inventory, look up policy rules, search the web for pricing, 
                 create purchase orders with human-in-the-loop approval, and summarize daily PO activity.</li>
@@ -247,15 +237,18 @@
                 <div class="flex-box">AWS Bedrock</div>
                 <div class="flex-box">Azure OpenAI</div>
                 <div class="flex-box">Azure Blob</div>
+                <div class="flex-box">AWS S3</div>
                 <div class="flex-box">Azure SQL Data base</div>
                 <div class="flex-box">React Js</div>
               </div>
             </div>
 
-            <h4>AI Consultant</h4>
-            <h5>Jan'22 - Mar'25</h5>
+
+
+            <h4>AI Consultant/Engineer</h4>
+            <h5>Jan'24 - Mar'25</h5>
             <p><em>Clients (Europe & US)</em></p>
-            <h4><b>AI Skill Assistant - Multi step Agent (Semantic Kernel + FastAPI + RAG + Plugins and MCP Protocol + Observability)</b></h4>
+            <h4><b>Skill AI Agent - Multi step Agent (Semantic Kernel + FastAPI + RAG + Plugins and MCP Protocol + Application Insights)</b></h4>
             <ul>
               <li>Designed and implemented a multi-step agent using Microsoft Semantic Kernel that orchestrates multiple AI plugins to extract, refine, and enrich user queries
                 with the help of MCP Protocol using Azure OpenAI.</li>
@@ -372,15 +365,15 @@
                 <div class="flex-box">NVIDIA Deepstream</div>
                 <div class="flex-box">Nvidia Triton Inference Server</div>
                 <div class="flex-box">Langchain Framework</div>
-                <div class="flex-box">Vector Database - Azure Cognitive, Pincecone DB</div>
+                <div class="flex-box">Vector Database - Azure AI search, Pincecone DB</div>
                 <div class="flex-box">Linux - Ubuntu</div>
                 <div class="flex-box">Python</div>
                 <div class="flex-box">SQL</div>
                 <div class="flex-box">NOSQL Database - CosmosDB</div>
                 <div class="flex-box">Docker</div>
                 <div class="flex-box">Kubernetes</div>
-                <div class="flex-box">Azure Devops</div>
-                <div class="flex-box">Github Actions</div>
+                <div class="flex-box">Azure Pipelines</div>
+                <div class="flex-box">Bicep</div>
                 <div class="flex-box">Promptflow</div>
                 <div class="flex-box">Data Processing - Pyspark</div>
                 <div class="flex-box">Data Quality - Great Expectations</div>
