--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <div class="introduction-container" data-aos="fade-in">
       <h1>Ramanathan Perumal</h1>
       <p><span class="typed"
-          data-typed-items="AI Solution Architect, AI Technical Lead, AI Engineer, LLMOps Engineer, ML Engineer, Data Engineer, Java Engineer"></span>
+          data-typed-items="AI Architect, AI Consultant, AI Engineer, Data Engineer, Java Engineer"></span>
       </p>
     </div>
   </section><!-- End Introduction -->
@@ -102,10 +102,10 @@
           <h2>About</h2>
           <p>Versatile AI technologist passionate about transforming real-world challenges into intelligent, scalable solutions 
             through data, AI automation, and machine learning. Adept at bridging business goals with technical implementation 
-            to drive innovation and value across industries. An AI Engineer specializing in building end-to-end AI systems powered 
+            to drive innovation and value across industries. An AI Architect specializing in building end-to-end AI systems powered 
             by large language models (LLMs), retrieval-augmented generation (RAG), and cloud-native data platforms. 
-            Hands-on experience with tools like Azure OpenAI, LangChain, Semantic Kernel, and Databricks to deliver intelligent search, 
-            document understanding, and conversational AI solutions.
+            Hands-on experience with tools like Azure OpenAI, AWS Bedrock, LangGraph, LangChain, Semantic Kernel, CrewAI and AI Automationas to tools 
+            like Make and N8N to deliver intelligent search, document understanding, and conversational AI solutions.
           </p>
 
 
