text content fixing..

--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
             through data, AI automation, and machine learning. Adept at bridging business goals with technical implementation 
             to drive innovation and value across industries. An AI Architect specializing in building end-to-end AI systems powered 
             by large language models (LLMs), retrieval-augmented generation (RAG), and cloud-native data platforms. 
-            Hands-on experience with tools like Azure OpenAI, AWS Bedrock, LangGraph, LangChain, Semantic Kernel, CrewAI and AI Automationas to tools 
-            like Make and N8N to deliver intelligent search, document understanding, and conversational AI solutions.
+            Hands-on experience with tools like Azure OpenAI, AWS Bedrock, LangGraph, LangChain, Semantic Kernel, CrewAI and AI Automation tools 
+            like Copilot Studion, Make and N8N to deliver intelligent search, document understanding, and conversational AI solutions.
           </p>
 
 
