--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <!-- <li><a href="#myupdates" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>What I have been Upto</span></a></li> -->
           <li><a href="#ai" class="nav-link scrollto"><i class="bx bx-microchip"></i> <span>Industry Projects</span></a>
           </li>
-          <li><a href="#freelance" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Freelance
+          <li><a href="#freelance" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>AI POCs
                 Experience &
                 Projects</span></a></li>
           <!-- <li><a href="#beatbox" class="nav-link scrollto"><i class="bx bx-microphone"></i> <span>Beatbox</span></a></li> -->
@@ -185,7 +185,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Freelance Experience & Projects</h2>
+          <h2>AI POCs Experience & Projects</h2>
         </div>
         <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
           <!-- <h3 class="resume-title">Professional Experience</h3> -->
