--- a/index.html
+++ b/index.html
@@ -636,6 +636,26 @@
       </div>
     </section><!-- End Education Section -->
 
+    <section id="education" class="resume">
+      <div class="container">
+
+        <!-- <div class="section-title">
+          <h2>Education</h2>
+        </div> -->
+        <h3 class="resume-title">Exploring Topics</h3>
+        <div class="resume-item">
+          <h4>Knowledge Graph(RAG)</h4>
+          <!--<h5>January 2021 - March 2022</h5>-->
+          <p><em>Azure, AWS</em></p>
+          <h4>Neo4J</h4>
+          <!--<h5>2010 - 2014</h5>-->
+          <p><em>AWS, Azure</em></p>
+        </div>
+      </div>
+
+      </div>
+    </section><!-- End Education Section -->
+
   </main><!-- End #main -->
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
